# kedro-tf-image

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pytest.yml
conf/base/: catalog.yml
conf/base/parameters/: preprocess.yml
data/01_raw/: skintype.csv
docs/source/: conf.py  index.rst
notes/: dermatogram.md  notes.md
src/: requirements.in  requirements.txt  setup.py
src/kedro_tf_image/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/kedro_tf_image/extras/datasets/: __init__.py  image_dataset.py  tf_generic_image.py  tf_image_dataset.py  tf_image_folder.py  tf_image_generic.py  tf_image_processed.py  tf_load_weights.py  tf_model_download.py  tf_model_weights.py  tf_processed_dataset.py
src/kedro_tf_image/pipelines/data_engineering/: README.md
src/kedro_tf_image/pipelines/data_science/: README.md
src/kedro_tf_image/pipelines/preprocess/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/preprocess/: test_pipeline.py
